# zipfs

./: .gitmodules  CMakeLists.txt  README.md  ZipRead.cpp  ZipRead.h  main.cpp  makefile  testZip.cpp
test/data/: 1.txt  a.txt
